2006-03-10  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MapView.py: try to avoid startup traceback

2006-03-10  Alex Roitman  <shura@gramps-project.org>
	* src/Plugins.py, src/PluginMgr.py: Move to ReportUtils.
	* various: use ReportUtils instead of PluginMgr.

2006-03-10  Don Allingham  <don@gramps-project.org>
	* src/Mime/PythonMime.py: import gtk
	* src/DataViews/_FamilyList.py: family_add explict function added,
	remove family functionality
	* src/GrampsWidgets.py: use STOCK_DIALOG_INFO as a fallback if
	STOCK_INFO does not exist (FreeBSD?)

2006-03-09  Don Allingham  <don@gramps-project.org>
	* src/AddMedia.py: avoid double commit
	* src/GrampsDb/_GrampsDbBase.py: fix add of places in internal map
	* src/Editors/_EditEventRef.py: commit place properly
	* src/DataViews/_FamilyView.py: avoid reentry
	* src/DataViews/_PedigreeView.py: handle PluginUtils
	* src/DataViews/_PersonView.py: handle remove person better
	* src/Editors/_EditFamily.py: connect children up properly
	* src/PeopleModel.py: handle delete properly

2006-03-09  Alex Roitman  <shura@gramps-project.org>
	* PluginUtils: Add module with Report and Tool utils.

2006-03-09  Don Allingham  <don@gramps-project.org>
	* src/const.py.in: add use_tips variable
	* src/PeopleModel.py: use_tips to control tool tips
	* src/DataModels.py: use_tips to control tool tips

2006-03-08  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: fix spacing
	* src/Editors/_EditPrimary.py: make sure object is valid before
	compare
	* src/GenericFilter.py: remove print
	* src/Editors/_EditFamily.py: fix family selection

2006-03-08  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditFamily.py: Use tuple relations.
	* src/GramspDb/_GrampsBSDDB.py: Minor fixes.

2006-03-08  Don Allingham  <don@gramps-project.org>
	* src/GramspDb/_GrampsBSDDB.py: make txn support optional via UseTXN

2006-03-07  Don Allingham  <don@gramps-project.org>
	* src/AddMedia.py: remove WindowsUtils dependency