@@ -38,8 +38,9 @@ import re
 #
 #-------------------------------------------------------------------------
 from RelLib import Date
-from DateParser import DateParser
-from DateDisplay import DateDisplay
+from _DateParser import DateParser
+from _DateDisplay import DateDisplay
+from _DateHandler import register_datehandler
 
 #-------------------------------------------------------------------------
 #
@@ -158,5 +159,4 @@ class DateDisplayES(DateDisplay):
 # Register classes
 #
 #-------------------------------------------------------------------------
-from DateHandler import register_datehandler
 register_datehandler(('es_ES','es','spanish'),DateParserES, DateDisplayES)
