@@ -38,8 +38,9 @@ import re
 #
 #-------------------------------------------------------------------------
 from RelLib import Date
-from DateParser import DateParser
-from DateDisplay import DateDisplay
+from _DateParser import DateParser
+from _DateDisplay import DateDisplay
+from _DateHandler import register_datehandler
 
 #-------------------------------------------------------------------------
 #
@@ -242,5 +243,5 @@ class DateDisplayFR(DateDisplay):
 # Register classes
 #
 #-------------------------------------------------------------------------
-from DateHandler import register_datehandler
-register_datehandler(('fr_FR','fr','french','fr_CA','fr_BE','fr_CH'),DateParserFR,DateDisplayFR)
+register_datehandler(('fr_FR','fr','french','fr_CA','fr_BE','fr_CH'),
+                     DateParserFR,DateDisplayFR)
