@@ -38,8 +38,9 @@ import re
 #
 #-------------------------------------------------------------------------
 from RelLib import Date
-from DateParser import DateParser
-from DateDisplay import DateDisplay
+from _DateParser import DateParser
+from _DateDisplay import DateDisplay
+from _DateHandler import register_datehandler
 
 #-------------------------------------------------------------------------
 #
@@ -164,5 +165,4 @@ class DateDisplaySv(DateDisplay):
 # Register classes
 #
 #-------------------------------------------------------------------------
-from DateHandler import register_datehandler
 register_datehandler(('sv_SE','sv','svensk'),DateParserSv, DateDisplaySv)
