@@ -4,6 +4,9 @@
 2006-03-10  Alex Roitman  <shura@gramps-project.org>
 	* src/Plugins.py, src/PluginMgr.py: Move to ReportUtils.
 	* various: use ReportUtils instead of PluginMgr.
+	* DateHandler/_DateHandler.py: Rename __init__; remove dependency
+	on load_plugins.
+	* DateHandler/__init__.py: Add new file.
 
 2006-03-10  Don Allingham  <don@gramps-project.org>
 	* src/Mime/PythonMime.py: import gtk
